<resources>
    <!-- Titles -->
    <string name="app_name">ProjectX</string>
    <string name="album_name">Your Albums</string>
    <string name="local_photos_name">Your Photos</string>
    <string name="favorites_name">Favorite Albums</string>
    <string name="navigation_name">Navigation</string>
    <string name="search_name">Search</string>
    <string name="settings_name">Settings</string>

    <!-- Sign-In/Sign-Up Form Resources -->
    <string name="text_email">E-Mail</string>
    <string name="text_password">Password</string>
    <string name="text_signin">Sign In</string>
    <string name="text_forgot">Forgot Your Password?</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_signupInfo">Please fill out the form below</string>
    <string name="text_signupNow">Don\'t already have an account? Sign Up!</string>


    <!-- Navigation Resources -->
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_settings">Settings</string>
    <string name="text_navigation">Maps</string>
    <string name="text_user">Albums</string>
    <string name="text_search">Search</string>

    <!-- User Tab Resources -->
    <string name="user_text_info">Click the options menu to add photos</string>
    <string name="user_text_addphotos">CONFIRM</string>

    <!-- About Page -->
    <string name="about_name">About</string>
    <string name="about_title">Thanks To:</string>
    <string name="iconCredit"><a href="https://www.flaticon.com/authors/gregor-cresnar">Icons made by Gregor Cresnar from www.flaticon.com</a></string>


    <!-- Settings ListView Resources -->
    <string-array name="settings_array">
        <item>About</item>
        <item>Change Theme</item>
        <item>Change Default Privacy</item>
        <item>Sign Out</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
