<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_createEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_email"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/edit_createPassword"
        />

    <EditText
        android:id="@+id/edit_createPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/text_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_above="@id/button_signup"
        />

    <TextView
        android:id="@+id/view_createInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signupInfo"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_above="@id/edit_createEmail"
        />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_centerInParent="true"
        />
    </RelativeLayout>
</FrameLayout>