<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SignInUpTheme"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_signUpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_signupInfo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_in_sign_up_margin">

            <EditText
                android:id="@+id/edit_createemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_in_sign_up_margin"
            >

            <EditText
                android:id="@+id/edit_createpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_in_sign_up_margin"
            android:text="Sign Up" />
    </LinearLayout>
</ScrollView>
